--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ main {
 }
 .calculator {
   display: inline-block;
-  background-color: #756971;
+  background-color: #d36db1;
   padding: 15px;
   border-radius: 15px;
 }
@@ -32,7 +32,7 @@ main {
 }
 .borders {
   border-radius: 5px;
-  box-shadow: 0 0 0 5px #625458;
+  box-shadow: 0 0 0 5px #bc458c;
 }
 
 .txtDisplay {
@@ -52,6 +52,7 @@ main {
 }
 
 .btn-wrapper {
+    background-color: #bc458c;
   margin-top: 7px;
   display: inline-grid;
   grid-template-columns: repeat(4, auto);
@@ -61,11 +62,11 @@ main {
 .btn {
   height: 50px;
   width: 50px;
-  background-color: #5e4d53;
+  background-color: #993377;
   border: 2px solid #372929;
   border-radius: 5px;
   box-shadow: rgba(255, 255, 255, 0.11) 3px 3px 0px inset,
-    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px inset,
+    rgba(0, 0, 0, 0.3) 7px 7px 13px -3px inset,
     rgba(0, 0, 0, 0.2) -3px -3px 0px inset;
 
   color: #eaedec;
